# fast_api_img

./: .gitignore  README.md  main.py  pyproject.toml
api_v1/: models.py  schemas.py  utils.py  views.py
core/: database.py
